--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,8 @@
    
     <link rel="stylesheet" href="./css/styles.css">
 
+    <link rel="stylesheet" htef="./css/modern-normalize.css">
+
 </head>
 <body>
     <header>
