--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" htef="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
-
-    <link rel="stylesheet" htef="./css/modern-normalize.css">
 
 </head>
 <body>
-    <header>
-    <a href="url" class="studio"><span class="web">Web</span>Studio</a>
-       <nav>
+    <header class="hero">
+    <section>
+    <nav>
+        <a href="/" class="studio"><span class="web">Web</span>Studio</a>
         <ul class="navigation">
             <li>
                 <a class="stud" href="./index.html">Студія</a>
@@ -33,14 +33,17 @@
     </nav>
         <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
         <a href="tel:+380961111111" class="tel">+380961111111</a>
+    </section>
     </header>
     <main>
+        <div class="container">
         <section class="section">
-            <h1 class="title">ЕФЕКТИВНІ ПОРАДИ<br>ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-            <button class="button" type="button">Замовити послугу</button>
-            </section>
-            <section>
-                <ul class="head_">
+            <h1 class="title">ЕФЕКТИВНІ ПОРАДИ ДЛЯ<br>ВАШОГО БІЗНЕСУ</h1>
+            <button class="button" type="button">Замов. послугу</button>
+        </section>
+        </div>
+            <section class="section">
+                <ul class="container_f">
                     <li>
                         <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="text">Ідейні міркування, <br>і навіть початок повсякденної роботи<br> з формування позиції.</p>
@@ -55,32 +58,35 @@
                     </li>
                     <li>    
                         <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p class="text">Значимість цих проблем <br>є настільки очевидною,<br> що реалізація планових завдань</p>
+                        <p class="text">Значимість цих проблем <br>є настільки очевидною, що<br>реалізація планових завдань</p>
                     </li>
                 </ul>
             </section>
-        <section>
-            <h2 class="headr">Чим ми займаємось</h2>
+        <section class="section">
+            <div class="container_s">
+            <h2>Чим ми займаємось</h2>
             <ul>
-                <li>
+                <li class="images">
                     <img src="images/programer-desk-office.jpg" 
                     alt="програміст за робочим столом" 
                     width="370">
                 </li>
-                <li>
+                <li class="images">
                     <img src="images/web-ui-designers-smartphone.jpg" 
                     alt="веб-дизайнери розробляють додаток смартфону" 
                     width="370">
                 </li>
-                <li>
+                <li class="images">
                     <img src="images/web-design-colour.jpg" 
                     alt="веб-дизайней вибирає колір планшету" 
                     width="370">
                 </li>
                 </ul>
-        </section>
-        <section class="team">
-            <h2 class="team_">Наша команда</h2>
+            </section>
+        </div>
+        <section class="section_t">
+            <div class="container_t">
+            <h2>Наша команда</h2>
             <ul class="name">
                 <li>
                     <img src="images/smiling-man.jpg" 
@@ -111,15 +117,18 @@
                     <p class="profession">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
+        <div class="container_fot">
         <a href="url" class="studioo"><span class="web">Web</span>Studio</a>
             <address>
                <p class="adres">м. Київ, проспект Лесі Українки, 26</p>
                 <a href="mailto:info@devstudio.com" class="maill">info@devstudio.com</a><br>
                 <a href="tel:+380961111111" class="tell">+380961111111</a>
             </address>
+        </div>
     </footer>
     </body>
 </html>
