--- a/portfolio.html
+++ b/portfolio.html
@@ -10,125 +10,130 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
    
+    <link rel="stylesheet" htef="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    
     <link rel="stylesheet" href="./css/styles.css">
-
-    <link rel="stylesheet" htef="./css/modern-normalize.css">
-
+  
 </head>
 <body>
-    <header>
-    <a href="url" class="studio"><span class="web">Web</span>Studio</a>
-       <nav>
-        <ul class="navigation">
-            <li>
-                <a class="studio_" href="./index.html">Студія</a>
-            </li>
-            <li>
-                <a class="port" href="./portfolio.html">Портфоліо</a>
-            </li>
-            <li>
-                <a class="cont" href="url">Контакти</a>
-            </li>
-        </ul>
-    </nav>
-        <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
-        <a href="tel:+380961111111" class="tel">+380961111111</a>
+    <header class="hero">
+        <section>
+            <nav>
+            <a href="/" class="studio"><span class="web">Web</span>Studio</a>
+               <ul class="navigation">
+                    <li>
+                        <a class="stud" href="./index.html">Студія</a>
+                    </li>
+                    <li>
+                        <a class="port" href="./portfolio.html">Портфоліо</a>
+                    </li>
+                    <li>
+                        <a class="cont" href="url">Контакти</a>
+                    </li>
+                </ul>
+            </nav>
+                <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
+                <a href="tel:+380961111111" class="tel">+380961111111</a>
+                </section>
     </header>
     <br>
     <main>
-        <section>
+        <section class="section">
+            <div class="container-portf">
          <ul>
              <li> 
-                 <button class="button_chapters" type="button">Все</button>
+                 <button class="button_chapters-f" type="button">Все</button>
                 </li>
              <li>
-                <button class="button_chapters" type="button">Вебсайти</button>
+                <button class="button_chapters-s" type="button">Вебсайти</button>
                 </li>
              <li>
-                <button class="button_chapters" type="button">Застосунки</button>
+                <button class="button_chapters-t" type="button">Застосунки</button>
                 </li>
              <li>
-                <button class="button_chapters" type="button">Дизайн</button>
+                <button class="button_chapters-fo" type="button">Дизайн</button>
                 </li>
             <li>
-                <button class="button_chapters" type="button">Маркетинг</button>
+                <button class="button_chapters-ff" type="button">Маркетинг</button>
                 </li>
          </ul>
-         <ul class="name_">
+         <ul class="name_port">
                 <li>
                     <img src="images/screen.jpg" 
                     alt="екран ноута"
                     width="370">
                     <h3>Технокряк</h3>
-                    <p class="type">Вебсайт</p>
+                    <p class="profession_p">Вебсайт</p>
                 </li>
                 <li>
                     <img src="images/poster.jpg" 
                     alt="баскетбольний постер"
                     width="370">
                     <h3>Постер New Orlean vs Golden Star</h3>
-                    <p class="type">Дизайн</p>
+                    <p class="profession_p">Дизайн</p>
                 </li>
                 <li>
                     <img src="images/design.jpg"
                     alt="логотип"
                     width="370">
                     <h3>Ресторан Seafood</h3>
-                    <p class="type">Застосунок</p>
+                    <p class="profession_p">Застосунок</p>
                 </li>
                 <li>
                     <img src="images/headphone.jpg" 
                     alt="навушники"
                     width="370">
                     <h3>Проєкт Prime</h3>
-                    <p class="type">Маркетинг</p>
+                    <p class="profession_p">Маркетинг</p>
                 </li>
                 <li>
                     <img src="images/box.jpg" 
                     alt="дві коробки"
                     width="370">
                     <h3>Проєкт Boxes</h3>
-                    <p class="type">Застосунок</p>
+                    <p class="profession_p">Застосунок</p>
                 </li>
                 <li>
                     <img src="images/monitor.jpg" 
                     alt="моноблок"
                     width="370">
                     <h3>Inspiration has no Borders</h3>
-                    <p class="type">Вебсайт</p>
+                    <p class="profession_p">Вебсайт</p>
                 </li>
                 <li>
                     <img src="images/book.jpg" 
                     alt="розкрита книга"
                     width="370">
                     <h3>Видавицтво Limited Edition</h3>
-                    <p class="type">Дихайн</p>
+                    <p class="profession_p">Дизайн</p>
                 </li>
                 <li>
                     <img src="images/tag.jpg" 
                     alt="бірка"
                     width="370">
                     <h3>Проєкт LAB</h3>
-                    <p class="type">Маркетинг</p>
+                    <p class="profession_p">Маркетинг</p>
                 </li>
                 <li>
                     <img src="images/laptop.jpg" 
                     alt="робота за ноутбуком"
                     width="370">
                     <h3>Growing Business</h3>
-                    <p class="type">Застосунок</p>
+                    <p class="profession_p">Застосунок</p>
                 </li>
          </ul>
+         </div>
         </section>
     </main>
-
     <footer class="footer">
+        <div class="container_fot">
         <a href="url" class="studioo"><span class="web">Web</span>Studio</a>
             <address>
                <p class="adres">м. Київ, проспект Лесі Українки, 26</p>
                 <a href="mailto:info@devstudio.com" class="maill">info@devstudio.com</a><br>
                 <a href="tel:+380961111111" class="tell">+380961111111</a>
             </address>
+        </div>
     </footer>
     </body>
 </html>
