--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
     </section>
     </header>
     <main>
-        <div class="container">
         <section class="section">
-            <h1 class="title">ЕФЕКТИВНІ ПОРАДИ ДЛЯ<br>ВАШОГО БІЗНЕСУ</h1>
-            <button class="button" type="button">Замов. послугу</button>
+            <div class="container">
+                <h1 class="title">ЕФЕКТИВНІ ПОРАДИ ДЛЯ<br>ВАШОГО БІЗНЕСУ</h1>
+                <button class="button" type="button">Замов. послугу</button>
+            </div>
         </section>
-        </div>
             <section class="section">
-                <ul class="container_f">
+                <div class="container_f">
+                <ul>
                     <li>
                         <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="text">Ідейні міркування, <br>і навіть початок повсякденної роботи<br> з формування позиції.</p>
@@ -61,6 +62,7 @@
                         <p class="text">Значимість цих проблем <br>є настільки очевидною, що<br>реалізація планових завдань</p>
                     </li>
                 </ul>
+            </div>
             </section>
         <section class="section">
             <div class="container_s">
