--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
   
 </head>
 <body>
-    <header class="hero">
-        <section>
+    <header class="hero-sec">
+        <section class="hero_">
             <nav>
             <a href="/" class="studio"><span class="web">Web</span>Studio</a>
                <ul class="navigation">
