--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 </head>
 <body>
-    <header class="hero">
+    <header >
     <section>
+        <div class="hero">
     <nav>
         <a href="/" class="studio"><span class="web">Web</span>Studio</a>
         <ul class="navigation">
@@ -33,6 +34,7 @@
     </nav>
         <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
         <a href="tel:+380961111111" class="tel">+380961111111</a>
+    </div>
     </section>
     </header>
     <main>
