--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,8 @@
 </head>
 <body>
     <header class="hero-sec">
-        <section class="hero_">
+        <section>
+            <div class="hero_">
             <nav>
             <a href="/" class="studio"><span class="web">Web</span>Studio</a>
                <ul class="navigation">
@@ -34,7 +35,8 @@
             </nav>
                 <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
                 <a href="tel:+380961111111" class="tel">+380961111111</a>
-                </section>
+            </div>
+            </section>
     </header>
     <br>
     <main>
