--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header >
-    <section>
+    <section class="section">
         <div class="hero">
     <nav>
         <a href="/" class="studio"><span class="web">Web</span>Studio</a>
@@ -45,7 +45,7 @@
             </div>
         </section>
             <section class="section">
-                <div class="container_f">
+                <div class="container_">
                 <ul>
                     <li>
                         <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -67,7 +67,7 @@
             </div>
             </section>
         <section class="section">
-            <div class="container_s">
+            <div class="container_">
             <h2>Чим ми займаємось</h2>
             <ul>
                 <li class="images">
@@ -88,8 +88,8 @@
                 </ul>
             </section>
         </div>
-        <section class="section_t">
-            <div class="container_t">
+        <section class="section" style="background-color: #F5F4FA">
+            <div class="container_">
             <h2>Наша команда</h2>
             <ul class="name">
                 <li>
