--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header >
-    <section class="section">
+    <section>
         <div class="hero">
     <nav>
         <a href="/" class="studio"><span class="web">Web</span>Studio</a>
@@ -88,7 +88,7 @@
                 </ul>
             </section>
         </div>
-        <section class="section" style="background-color: #F5F4FA">
+        <section class="section">
             <div class="container_">
             <h2>Наша команда</h2>
             <ul class="name">
