--- a/portfolio.html
+++ b/portfolio.html
@@ -11,13 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
    
     <link rel="stylesheet" htef="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    
     <link rel="stylesheet" href="./css/styles.css">
   
 </head>
 <body>
     <header class="hero-sec">
-        <section>
             <div class="hero_">
             <nav>
             <a href="/" class="studio"><span class="web">Web</span>Studio</a>
@@ -36,7 +34,6 @@
                 <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
                 <a href="tel:+380961111111" class="tel">+380961111111</a>
             </div>
-            </section>
     </header>
     <br>
     <main>
@@ -64,64 +61,82 @@
                     <img src="images/screen.jpg" 
                     alt="екран ноута"
                     width="370">
+                <div class="about">
                     <h3>Технокряк</h3>
                     <p class="profession_p">Вебсайт</p>
+                </div>
                 </li>
                 <li>
                     <img src="images/poster.jpg" 
                     alt="баскетбольний постер"
                     width="370">
+                <div class="about">
                     <h3>Постер New Orlean vs Golden Star</h3>
                     <p class="profession_p">Дизайн</p>
+                </div>
                 </li>
                 <li>
                     <img src="images/design.jpg"
                     alt="логотип"
                     width="370">
+                <div class="about">    
                     <h3>Ресторан Seafood</h3>
                     <p class="profession_p">Застосунок</p>
+                </div>
                 </li>
                 <li>
                     <img src="images/headphone.jpg" 
                     alt="навушники"
                     width="370">
+                <div class="about">
                     <h3>Проєкт Prime</h3>
                     <p class="profession_p">Маркетинг</p>
+                </div>
                 </li>
                 <li>
                     <img src="images/box.jpg" 
                     alt="дві коробки"
                     width="370">
+                <div class="about">
                     <h3>Проєкт Boxes</h3>
                     <p class="profession_p">Застосунок</p>
+                </div>
                 </li>
                 <li>
                     <img src="images/monitor.jpg" 
                     alt="моноблок"
                     width="370">
+                <div class="about">
                     <h3>Inspiration has no Borders</h3>
                     <p class="profession_p">Вебсайт</p>
+                </div>
                 </li>
                 <li>
                     <img src="images/book.jpg" 
                     alt="розкрита книга"
                     width="370">
+                <div class="about">
                     <h3>Видавицтво Limited Edition</h3>
                     <p class="profession_p">Дизайн</p>
+                </div>
                 </li>
                 <li>
                     <img src="images/tag.jpg" 
                     alt="бірка"
                     width="370">
+                <div class="about">    
                     <h3>Проєкт LAB</h3>
                     <p class="profession_p">Маркетинг</p>
+                </div>
                 </li>
                 <li>
                     <img src="images/laptop.jpg" 
                     alt="робота за ноутбуком"
                     width="370">
+                <div class="about">
                     <h3>Growing Business</h3>
                     <p class="profession_p">Застосунок</p>
+                </div>
                 </li>
          </ul>
          </div>
