--- a/index.html
+++ b/index.html
@@ -96,29 +96,37 @@
                     <img src="images/smiling-man.jpg" 
                     alt="щиро усміхнений чоловік в круглих окулярах з бородою" 
                     width="270">
+                <div class="about_">
                     <h3>Ігор Дем'яненко</h3>
                     <p class="profession">Product Designer</p>
+                </div>
                 </li>
                 <li>
                     <img src="images/beautiful_girl.jpg"
                     alt="усміхнена блондинка в окулярах" 
                     width="270">
+                <div class="about_">
                     <h3>Ольга Репіна</h3>
                     <p class="profession">Frontend Developer</p>
+                </div>
                 </li>
                 <li>
                     <img src="images/smiling-man_.jpg" 
                     alt="чоловік з щетиною усміхається в праву сторону від нас" 
                     width="270">
+                <div class="about_">
                     <h3>Микола Тарасов</h3>
                     <p class="profession">Marketing</p>
+                </div>
                 </li>
                 <li>
                     <img src="images//modest_man.jpg" 
                     alt="скромна посмішка бородатого чоловіка в окулярах" 
                     width="270">
+                <div class="about_">
                     <h3>Михайло Єрмаков</h3>
                     <p class="profession">UI Designer</p>
+                </div>
                 </li>
             </ul>
             </div>
