--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" htef="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 
 </head>
@@ -45,7 +45,7 @@
             </div>
         </section>
             <section class="section">
-                <div class="container_">
+                <div class="container_second">
                 <ul>
                     <li>
                         <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -67,7 +67,7 @@
             </div>
             </section>
         <section class="section">
-            <div class="container_">
+            <div class="container_second">
             <h2>Чим ми займаємось</h2>
             <ul>
                 <li class="images">
@@ -89,7 +89,7 @@
             </section>
         </div>
         <section class="section">
-            <div class="container_">
+            <div class="container_second">
             <h2>Наша команда</h2>
             <ul class="name">
                 <li>
