--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
     </header>
     <main>
-        <section class="section">
+        <section>
             <div class="container">
                 <h1 class="title">ЕФЕКТИВНІ ПОРАДИ ДЛЯ<br>ВАШОГО БІЗНЕСУ</h1>
                 <button class="button" type="button">Замов. послугу</button>
@@ -48,28 +48,28 @@
                 <div class="container_second">
                 <ul>
                     <li>
-                        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <h3 class="title-first">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="text">Ідейні міркування, <br>і навіть початок повсякденної роботи<br> з формування позиції.</p>
                     </li>
-                    <li>                        
+                    <li class="title-first">                        
                         <h3>ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="text">Завдання організації, особливо <br>рамки і місце навчання<br> кадрів тягне за собою.</p>
                     </li>
-                    <li>    
+                    <li class="title-first">    
                         <h3>ПЛАНУВАННЯ</h3>
                         <p class="text">Так само консультація <br>з широким активом<br> значно обумовлює.</p>
                     </li>
                     <li>    
-                        <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <h3 class="title-first">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                         <p class="text">Значимість цих проблем <br>є настільки очевидною, що<br>реалізація планових завдань</p>
                     </li>
                 </ul>
             </div>
             </section>
-        <section class="section">
+        <section>
             <div class="container_second">
             <h2>Чим ми займаємось</h2>
-            <ul>
+            <ul class="photo">
                 <li class="images">
                     <img src="images/programer-desk-office.jpg" 
                     alt="програміст за робочим столом" 
@@ -88,7 +88,7 @@
                 </ul>
             </section>
         </div>
-        <section class="section">
+        <section>
             <div class="container_second">
             <h2>Наша команда</h2>
             <ul class="name">
@@ -133,11 +133,11 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container_fot">
+        <div class="container_second">
         <a href="url" class="studioo"><span class="web">Web</span>Studio</a>
             <address>
                <p class="adres">м. Київ, проспект Лесі Українки, 26</p>
-                <a href="mailto:info@devstudio.com" class="maill">info@devstudio.com</a><br>
+                <a href="mailto:info@devstudio.com" class="maill">info@devstudio.com</a> <br>
                 <a href="tel:+380961111111" class="tell">+380961111111</a>
             </address>
         </div>
