--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
     </header>
     <main>
-        <section>
+        <section class="button-use">
             <div class="container">
                 <h1 class="title">ЕФЕКТИВНІ ПОРАДИ ДЛЯ<br>ВАШОГО БІЗНЕСУ</h1>
                 <button class="button" type="button">Замов. послугу</button>
@@ -51,12 +51,12 @@
                         <h3 class="title-first">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="text">Ідейні міркування, <br>і навіть початок повсякденної роботи<br> з формування позиції.</p>
                     </li>
-                    <li class="title-first">                        
-                        <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <li>                        
+                        <h3 class="title-first">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="text">Завдання організації, особливо <br>рамки і місце навчання<br> кадрів тягне за собою.</p>
                     </li>
-                    <li class="title-first">    
-                        <h3>ПЛАНУВАННЯ</h3>
+                    <li>    
+                        <h3 class="title-first">ПЛАНУВАННЯ</h3>
                         <p class="text">Так само консультація <br>з широким активом<br> значно обумовлює.</p>
                     </li>
                     <li>    
@@ -66,7 +66,7 @@
                 </ul>
             </div>
             </section>
-        <section>
+        <section class="section">
             <div class="container_second">
             <h2>Чим ми займаємось</h2>
             <ul class="photo">
@@ -88,7 +88,7 @@
                 </ul>
             </section>
         </div>
-        <section>
+        <section class="section">
             <div class="container_second">
             <h2>Наша команда</h2>
             <ul class="name">
@@ -97,7 +97,7 @@
                     alt="щиро усміхнений чоловік в круглих окулярах з бородою" 
                     width="270">
                 <div class="about_">
-                    <h3>Ігор Дем'яненко</h3>
+                    <h3 class="title-second">Ігор Дем'яненко</h3>
                     <p class="profession">Product Designer</p>
                 </div>
                 </li>
@@ -106,7 +106,7 @@
                     alt="усміхнена блондинка в окулярах" 
                     width="270">
                 <div class="about_">
-                    <h3>Ольга Репіна</h3>
+                    <h3 class="title-second">Ольга Репіна</h3>
                     <p class="profession">Frontend Developer</p>
                 </div>
                 </li>
@@ -115,7 +115,7 @@
                     alt="чоловік з щетиною усміхається в праву сторону від нас" 
                     width="270">
                 <div class="about_">
-                    <h3>Микола Тарасов</h3>
+                    <h3 class="title-second">Микола Тарасов</h3>
                     <p class="profession">Marketing</p>
                 </div>
                 </li>
@@ -124,7 +124,7 @@
                     alt="скромна посмішка бородатого чоловіка в окулярах" 
                     width="270">
                 <div class="about_">
-                    <h3>Михайло Єрмаков</h3>
+                    <h3 class="title-second">Михайло Єрмаков</h3>
                     <p class="profession">UI Designer</p>
                 </div>
                 </li>
