--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
                     alt="екран ноута"
                     width="370">
                 <div class="about">
-                    <h3>Технокряк</h3>
+                    <h3 class="title-second">Технокряк</h3>
                     <p class="profession_p">Вебсайт</p>
                 </div>
                 </li>
@@ -70,7 +70,7 @@
                     alt="баскетбольний постер"
                     width="370">
                 <div class="about">
-                    <h3>Постер New Orlean vs Golden Star</h3>
+                    <h3 class="title-second">Постер New Orlean vs Golden Star</h3>
                     <p class="profession_p">Дизайн</p>
                 </div>
                 </li>
@@ -79,7 +79,7 @@
                     alt="логотип"
                     width="370">
                 <div class="about">    
-                    <h3>Ресторан Seafood</h3>
+                    <h3 class="title-second">Ресторан Seafood</h3>
                     <p class="profession_p">Застосунок</p>
                 </div>
                 </li>
@@ -88,7 +88,7 @@
                     alt="навушники"
                     width="370">
                 <div class="about">
-                    <h3>Проєкт Prime</h3>
+                    <h3 class="title-second">Проєкт Prime</h3>
                     <p class="profession_p">Маркетинг</p>
                 </div>
                 </li>
@@ -97,7 +97,7 @@
                     alt="дві коробки"
                     width="370">
                 <div class="about">
-                    <h3>Проєкт Boxes</h3>
+                    <h3 class="title-second">Проєкт Boxes</h3>
                     <p class="profession_p">Застосунок</p>
                 </div>
                 </li>
@@ -106,7 +106,7 @@
                     alt="моноблок"
                     width="370">
                 <div class="about">
-                    <h3>Inspiration has no Borders</h3>
+                    <h3 class="title-second">Inspiration has no Borders</h3>
                     <p class="profession_p">Вебсайт</p>
                 </div>
                 </li>
@@ -115,7 +115,7 @@
                     alt="розкрита книга"
                     width="370">
                 <div class="about">
-                    <h3>Видавицтво Limited Edition</h3>
+                    <h3 class="title-second">Видавицтво Limited Edition</h3>
                     <p class="profession_p">Дизайн</p>
                 </div>
                 </li>
@@ -124,7 +124,7 @@
                     alt="бірка"
                     width="370">
                 <div class="about">    
-                    <h3>Проєкт LAB</h3>
+                    <h3 class="title-second">Проєкт LAB</h3>
                     <p class="profession_p">Маркетинг</p>
                 </div>
                 </li>
@@ -133,7 +133,7 @@
                     alt="робота за ноутбуком"
                     width="370">
                 <div class="about">
-                    <h3>Growing Business</h3>
+                    <h3 class="title-second">Growing Business</h3>
                     <p class="profession_p">Застосунок</p>
                 </div>
                 </li>
@@ -142,11 +142,11 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container_fot">
+        <div class="container_second">
         <a href="url" class="studioo"><span class="web">Web</span>Studio</a>
             <address>
                <p class="adres">м. Київ, проспект Лесі Українки, 26</p>
-                <a href="mailto:info@devstudio.com" class="maill">info@devstudio.com</a><br>
+                <a href="mailto:info@devstudio.com" class="maill">info@devstudio.com</a> <br>
                 <a href="tel:+380961111111" class="tell">+380961111111</a>
             </address>
         </div>
