--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
         <a href="url" class="studioo"><span class="web">Web</span>Studio</a>
             <address>
                <p class="adres">м. Київ, проспект Лесі Українки, 26</p>
-                <a href="mailto:info@devstudio.com" class="maill">info@devstudio.com</a> <br>
+            <div class="address">
+                <a href="mailto:info@devstudio.com" class="maill">info@devstudio.com</a>
+            </div>
                 <a href="tel:+380961111111" class="tell">+380961111111</a>
             </address>
         </div>
